--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
-*.java linguist-detectable=true
+*.Html linguist-detectable=true
 *.csharp linguist-detectable=false
+*.java linguist-detectable=false
+*.js linguist-detectable=true
+*.xml linguist-detectable=false
